src/objects/FAU_Email__c.object
<CustomObject>
    <fields>
        <fullName>FAU_Additional_To__c</fullName>
        <description>Created for Additional To in E-mail</description>
        <label>Additional To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Body__c</fullName>
        <description>Created for E-mail body.</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAU_CC__c</fullName>
        <description>Created for CC in E-mail.</description>
        <label>CC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Email_Start_Date__c</fullName>
        <description>Created for Start Date in E-mail.</description>
        <label>Email Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_Email_Template_Id__c</fullName>
        <description>Created to store the Template Id .</description>
        <label>Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_ProgramId__c</fullName>
        <description>Created to store the program Id.</description>
        <label>ProgramId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship from E-mail to program.</description>
        <label>Program</label>
        <referenceTo>FAU_Program__c</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAU_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for send email button in E-mail.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Subject__c</fullName>
        <description>Created for the Subject of the E-mail.</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_To_Address__c</fullName>
        <description>Created for the To Address for the E-mail.</description>
        <label>To Address</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>Created for From Address in E-mail.</description>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <label>Email</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Email No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
</CustomObject>